--- a/open-in-a-window.html
+++ b/open-in-a-window.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <style>
+      body {
+  background: #0078ff;
+  padding: 0 24px;
+  margin: 0;
+  height: 100vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+    </style>
     <title>wsg gng</title>
   </head>
   <body>
