--- a/open-in-a-window.html
+++ b/open-in-a-window.html
@@ -15,7 +15,8 @@
   align-items: center;
 }
     </style>
-    <title>wsg gng</title>
+    <title>Open in a Window</title>
+    <link rel="icon" href="https://www.svgrepo.com/show/493695/link-external-new-window-open.svg" type="image/png">
   </head>
   <body>
     
