--- a/open-in-a-window.html
+++ b/open-in-a-window.html
@@ -16,7 +16,7 @@
 }
     </style>
     <title>Open in a Window</title>
-    <link rel="icon" href="https://i.postimg.cc/PqMxR3Cf/glass.png" type="image/png">
+    <link rel="icon" href="glass.png" type="image/png">
   </head>
   <body>
     
